--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ dj-database-url==0.4.2
 Django==1.10.5
 gunicorn
 psycopg2==2.6.2
-ipython
+# ipython -- substituido pelo jupyter
 model_mommy
 whitenoise
 django-widget-tweaks
+jupyter
