--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-dj-database-url==0.4.2
-Django==1.10.5
-gunicorn
-psycopg2==2.6.2
-# ipython -- substituido pelo jupyter
-model_mommy
-whitenoise
-django-widget-tweaks
-# jupyter
+dj-database-url==0.4.1
+Django==1.9.6
+gunicorn==19.4.5
+psycopg2==2.6.1
+model-mommy==1.2.6
+whitenoise==3.2
+django-widget-tweaks==1.4.1
